Fixed(?) scrollbar overflow issue and added auto-scroll to selected club

--- a/club_locator.css
+++ b/club_locator.css
@@ -56,9 +56,8 @@
 }
 
 .c-map__sidebar-listings {
-  height:100%;
+  height:87.5%;
   overflow:auto;
-  padding-bottom:60px;
 }
 
 .c-map__sidebar-listings .item {
@@ -82,10 +81,10 @@
   background-color:#f8f8f8;
 }
 ::-webkit-scrollbar {
-  width:3px;
-  height:3px;
+  width:20px;
+  height:10px;
   border-left:0;
-  background:rgba(0,0,0,0.1);
+  background:rgba(0,0,0,0.05);
 }
 ::-webkit-scrollbar-track {
   background:none;
